--- a/jupyter_notebook/LVIS_visualization.ipynb
+++ b/jupyter_notebook/LVIS_visualization.ipynb
@@ -273,7 +273,14 @@
     "        img_data = self.coco.imgs[img_id]\n",
     "        return img_data\n",
     "    \n",
-    "coco = COCODataset(data_path,inst_gt_json_file, True)"
+    "dataset = COCODataset(data_path,inst_gt_json_file, True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select one image & load annotation"
    ]
   },
   {
@@ -282,9 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get one image by id\n",
     "get_id = 1412\n",
-    "ori_img, gt_anno = coco[get_id]"
+    "ori_img, gt_anno = dataset[get_id]"
    ]
   },
   {
@@ -299,7 +305,7 @@
     "img = next(item for item in inst_gt['images'] if item['id']==img_id)\n",
     "\"\"\"\n",
     "# equals to\n",
-    "img = coco.get_img_info(get_id)\n",
+    "img = dataset.get_img_info(get_id)\n",
     "# img_name = img['file_name']\n",
     "# img_path = osp.join('../dataset/coco/images/val2017',img_name)\n",
     "h = img['height']; w = img['width']\n",
@@ -324,7 +330,7 @@
     "    inst_polys.append(i['segmentation'])\n",
     "    inst_boxes.append(i['bbox'])\n",
     "    inst_cat_ids.append(i['category_id'])\n",
-    "    inst_cat_names.append(coco.categories[i['category_id']])\n",
+    "    inst_cat_names.append(dataset.categories[i['category_id']])\n",
     "#     inst_cat_names.append(next(item for item in inst_gt['categories'] if item['id']==i['category_id'])['name'])\n",
     "\n",
     "# print('inst_cat_names in img',inst_cat_names)"
@@ -334,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualization"
+    "### Visualization"
    ]
   },
   {
